--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Welcome to CodeEmpire</title>
+    <title>Welcome to Midenus</title>
     <style>
         /* Add your CSS styles here */
         body {
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to CodeEmpire</h1>
+        <h1>Welcome to Midenus</h1>
         <p>Your source for innovative solutions in the tech world.</p>
         <br><br>
         <a class="button" href="#contact">Contact Us</a>
@@ -53,7 +53,7 @@
     <div id="contact" class="container">
         <h2>Contact Us</h2>
         <p>If you have any questions or inquiries, feel free to get in touch with us.</p>
-        <p>Email: codeempireorg@gmail.com</p>
+        <p>Email: contact.midenus@gmail.com </p>
     </div>
 </body>
 </html>
